ajustes del commit de Ezequiel
Lo primero que veo es que cargaste los archivos en una sub carpeta y tiene que ir en la raíz

Pase todos tu archivos al raíz
Corregi los links a los archivos movidos
Corregi el Css de footer para que se pegue al fondo.
    position:fixed;
    left:0px;
    bottom:0px;

jugue un poco con el footer para que quede más lindo
Cree un archivo vacío producto.html, porque es llamado desde index.html, así no rompe
Le agregue el HEAD footer y el NAV de index.html a todos los HTML para quequeden iguales
El formulario de compra no me gustó como quedo con el footer

--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@ nav{
     margin: auto;
     background-color: #333;
     font-size: 20px;
-    margin-top: 50px;
+    margin-top: 4.5vw;
     border: 5px;
     border-radius: 5px;
 }
@@ -89,19 +89,28 @@ nav{
 
 footer{
     background-color: aquamarine;
-    position: fixed;
     width: 100%;
-    bottom: 0;
+    position:fixed;
+    left:0px;
+    bottom:0px;
+    padding: 1vw;
     
 }
 
-
-.Redes a{
+.itmesfooter{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    padding-left: 0.1vw;
+    padding-right: 0.1vw;
+}
+.Redes{
+    padding-left: 0.1vw;
+    padding-right: 0.1vw;
 }
 
 .EnlacesFooter{
     display: flex;
-    justify-content: space-around;
+    flex-direction: row;
 }
