--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-image: url(Imagenes/fondo.jpg);
+    background-image: url("Imagenes/fondo.jpg");
     background-size: cover;
 
 }
