--- a/css/index.css
+++ b/css/index.css
@@ -2,13 +2,14 @@
     margin:0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family: 'Open Sanz';
 }
 
 body{
     background-image: url(../imagenes/fondo.jpg);
     background-size: auto;
     background-color: #333;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
 
 
 }
