--- a/css/form-validation.css
+++ b/css/form-validation.css
@@ -1,6 +1,7 @@
 .container {
   max-width: 960px;
   background-color: darkgray;
+  padding-bottom: 2vh;
 }
 .bd-placeholder-img {
   font-size: 1.125rem;
