--- a/css/index.css
+++ b/css/index.css
@@ -15,10 +15,10 @@ body{
 
 }
 header{
-    background-color: grey; /* ver color */
+    background-color: rgba(0, 0, 0, 1);
     position: fixed;
     top: 0;
-    left: 0;
+    left: 2%;
     width: 96%;
     z-index: 999px;
     text-align: center;
