arreglo de ruta de imagenes

--- a/css/index.css
+++ b/css/index.css
@@ -5,10 +5,9 @@
 }
 
 body{
-    background-image: url(../imagenes/fondo.jpg);
+    background-image: url(../Imagenes/fondo.jpg);
     background-color: black;
     background-size: auto;
-    /*background-color: #333;*/
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: white;
 
