cambio de slider
Cambie el slider por uno que es solo css, sin js, pero mucho más dinamico. no tiene botones, pero para las promos sirve

--- a/css/index.css
+++ b/css/index.css
@@ -90,9 +90,13 @@ nav{
     display: block;
 }
 
+h2{
+    text-align: center;
+    margin: 2vh auto;
+}
 .ClientesRegulares{
     width: 100%;
-    padding-top: 60px;
+    padding-top: 2vh;
     padding-bottom: 60px;
     display: flex;
     flex-direction: row;
