--- a/css/index.css
+++ b/css/index.css
@@ -10,9 +10,11 @@ body{
     background-size: auto;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: white;
-    z-index: 1;
-
-
+    padding-top: 150px;
+    padding-bottom: 60px;
+    margin-left: 2%;
+    margin-right: 2%;
+    
 }
 header{
     background-color: rgba(0, 0, 0, 1);
@@ -20,7 +22,7 @@ header{
     top: 0;
     left: 2%;
     width: 96%;
-    z-index: 99px;
+    z-index: 2;
     text-align: center;
 }
 
