--- a/css/slider.css
+++ b/css/slider.css
@@ -2,7 +2,8 @@
 	width: 80%;
     height: 400px;
 	margin:50px auto 0;
-	overflow: hidden;  //* ocuta todo lo que queda fuera del width y height*/
+	overflow: hidden;  /* ocuta todo lo que queda fuera del width y height*/
+	
 }
 
 .slider-frame ul {
