--- a/css/slider.css
+++ b/css/slider.css
@@ -1,6 +1,6 @@
 .slider-frame {
 	width: 80%;
-    height: 400px;
+    height: auto;
 	margin:50px auto 0;
 	overflow: hidden;  /* ocuta todo lo que queda fuera del width y height*/
 	
