api de logos de clientes
se cambia la foma de cargar los logs de clientes por una API que trae un JSON con los datos

--- a/css/MenuHamb.css
+++ b/css/MenuHamb.css
@@ -10,7 +10,7 @@ ul, ol {
 }
 
 section{
-    background: url(fondo.jpg) no-repeat;
+     background: url(../Imagenes/fondo.jpg) no-repeat;
     background-size: cover;
     background-position: center center;
     height: calc(100hv - 80px);
