--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -39,6 +39,9 @@ h2{
         flex-direction: column;
         align-items: center;
     }
+    .sucursales li iframe{
+        margin: 5px 0px 35px;
+    }
 }
 
 @media screen and (max-width: 858px) {
