--- a/css/productos.css
+++ b/css/productos.css
@@ -17,10 +17,6 @@
     padding: 1vw;
     display: flex;
     flex-direction: column;
-    
-
-    /* el tamaño de la imagen hayque definirlo en vw para cada tamaño de display */
-
 }
 .item-prod > img {
     width: 200px;
@@ -30,7 +26,7 @@
 .item-prod > h6 {
     font-size: 1.1em;
     width: 200px;
-    height: 20px;
+    padding-bottom: 5px;
 }
 .precio-prod{
     width: 65px;
@@ -53,9 +49,8 @@
     border-style: hidden;
     z-index: -1;
 }
-h6{
-    font-size: 1em;
-}
+
 .detalle-prod{
-    font-size: 0.8em;
+    font-size: 0.85em;
+    width: 200px;
 }
