--- a/css/MenuHamb.css
+++ b/css/MenuHamb.css
@@ -1,37 +1,39 @@
+header{
+    background-color: rgba(0, 0, 0, 1);
+    position: fixed;
+    top: 0;
+    left: 2%;
+    width: 96%;
+    z-index: 2;
+    text-align: center;
+}
 .nav{
     margin: auto;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    margin-left: 0px;
+    margin-right: 0ox;
     width: 100%;
-    background-color: black;
-
 }
 
 ul, ol {
     list-style: none;
 }
 
+
 section{
-     background: url(../Imagenes/fondo.jpg) no-repeat;
+    background: url(../Imagenes/fondo.jpg) no-repeat;
     background-size: cover;
     background-position: center center;
-    height: calc(100hv - 80px);
+    /* height: calc(100hv - 80px); */
 }
-
-
-
-
-
-
-
-
-
 .logo{
-    height: 80px;
+    height: 12vh;
 }
 
 .checkbtn{
     font-size: 30px;
     color: #fff;
-    
     cursor: pointer;
     display: none;
 }
@@ -41,11 +43,10 @@ section{
 }
 
 
-
 .menu-horizontal li a{
     color: #fff;
     text-decoration: none;
-    padding: 10px 15px;
+    padding: 1px 15px;
     display: block;
 }
 
@@ -59,7 +60,7 @@ section{
     align-items: center;
     justify-content: center;
     width: 10em;
-    height: 5em;
+    /* height: 5em; */
     font-size: 1.5em;
     border: 5px;
     border-radius: 5px;
@@ -77,7 +78,7 @@ section{
 .menu-horizontal li ul{
     display: none;
     position: absolute;
-    min-width: 140px;
+    /* min-width: 140px; */
 }
 
 .menu-horizontal li:hover > ul{
@@ -99,7 +100,7 @@ section{
 
 }
 
-@media screen and (max-width: 858px) {
+@media screen and (max-width: 700px) {
     section{
        height: calc(100hv - 30px);
    }
