--- a/css/index.css
+++ b/css/index.css
@@ -16,16 +16,6 @@ body{
     padding-bottom: 60px;
     margin-left: 2%;
     margin-right: 2%;
-    
-}
-header{
-    background-color: rgba(0, 0, 0, 1);
-    position: fixed;
-    top: 0;
-    left: 2%;
-    width: 96%;
-    z-index: 2;
-    text-align: center;
 }
 
 
@@ -56,7 +46,7 @@ h2{
 
 
 footer{
-    background-color: aquamarine;
+    background-color: grey;
     width: 100%;
     position:fixed;
     left:0px;
@@ -74,8 +64,19 @@ footer{
     padding-right: 0.1vw;
 }
 .Redes{
-    padding-left: 0.1vw;
-    padding-right: 0.1vw;
+    padding-left: 0.5vw;
+    padding-right: 0.4vw;
+    
+}
+.EnlacesFooter a:visited{
+    color:brown;
+}
+.EnlacesFooter a:focus{
+    background-color: black;
+}
+.Redes img{
+    width: 30px;
+    height: 30px;
 }
 
 .EnlacesFooter{
