Corrección de error de ortografía

--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -3,7 +3,7 @@
     padding: 0px;
     box-sizing: border-box;
 }
-.wellcome{
+.welcome{
     background-color: rgba(245, 245, 245, 0.048);
     border-radius: 5px;
 }
