--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -1,25 +1,25 @@
-*{
+/* *{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-}
+} */
 .wellcome{
     background-color: rgba(245, 245, 245, 0.048);
     border-radius: 5px;
 }
 
-p{
+.wellcome p{
     margin: 25px;
     font-size: 1.2em;
     text-align: justify;
 }
 
-p a {
+.wellcome p a {
     text-decoration: none;
     color: red
 }
 
-h2{
+.wellcome h2{
     margin: 100px 0px 50px;
 }
 
