--- a/css/productos.css
+++ b/css/productos.css
@@ -24,7 +24,7 @@ body{
 .item-prod > img {
     width: 200px;
     height: 200px;
-    z-index: -2;
+    z-index: 0;
 }
 .item-prod > h6 {
     font-size: 1.1em;
@@ -37,7 +37,7 @@ body{
     background-color: rgba(255, 255, 255, 0.808);
     font-weight: bold;
     font-size: 1em;
-    z-index: -1;
+    z-index: 1;
     transform: translate(135px,-20px);
     
 }
@@ -50,7 +50,14 @@ body{
     color: white;
     border-radius: 6px;
     border-style: hidden;
-    z-index: -1;
+    z-index: 2;
+}
+.btn-compra:hover{
+    background-color: red;
+    border-color: blue;
+    border-width: 2px;
+    border-style: groove;
+    cursor: pointer;
 }
 
 .detalle-prod{
