--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -1,30 +1,25 @@
-/* *{
+*{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-<<<<<<< HEAD
-} */
-.wellcome{
-=======
 }
 .welcome{
->>>>>>> 5fcb673baf20c199472951136b905c0c05980deb
     background-color: rgba(245, 245, 245, 0.048);
     border-radius: 5px;
 }
 
-.wellcome p{
+.welcome p{
     margin: 25px;
     font-size: 1.2em;
     text-align: justify;
 }
 
-.wellcome p a {
+.welcome p a {
     text-decoration: none;
     color: red
 }
 
-.wellcome h2{
+.welcome h2{
     margin: 100px 0px 50px;
 }
 
@@ -33,10 +28,13 @@
     justify-content: space-around;
     flex-direction: row;
     flex-wrap: wrap;
+    margin-bottom: 25px;
+
 }
 
 .sucursales li{
     margin: 5px;
+    
 }
 
 .mapa{
@@ -44,7 +42,7 @@
     height: 22vw;
 }
 
-@media screen and (max-width: 952px) {
+@media screen and (max-width: 768px) {
     p{
         font-size: 1em;
     }
@@ -54,6 +52,8 @@
         flex-direction: row;
         flex-wrap: wrap;
         align-items: center;
+        margin-bottom: 20px;
+
     }
 
     .mapa{
@@ -63,7 +63,7 @@
     }
 }
 
-@media screen and (max-width: 858px) {
+@media screen and (max-width: 600px) {
     p{
         font-size: 1em;
     }
@@ -71,6 +71,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-bottom: 15px;
     }
     .mapa{
         width: 60vw;
