implementacion de google fonts

--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@ body{
     background-position: top center;
     background-color: black;
     background-size: auto; */
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Inter, Verdana, Geneva, Tahoma, sans-serif;
     color: white;
     padding-top: 11vh;
     padding-bottom: 60px;
